--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     color: #222;
 }
@@ -64,4 +68,36 @@ div.post p.info a.author{
 div.post p.summary{
     margin: 10px 0;
     line-height: 1.2rem;
+}
+
+/* --------------------LOGIN AND REGISTER STYLE-------------------- */
+form h1{
+    text-align: center;
+}
+
+form.login, form.register{
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+input{
+    display: block;
+    margin-bottom: 5px;
+    width: 100%;
+    padding: 5px 7px;
+    border: 0;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    outline-color: #ddd;
+}
+
+button{
+    width: 100%;
+    display: block;
+    background-color: #555;
+    border-radius: 5px;
+    border: 0;
+    color: #fff;
+    padding: 7px 0;
 }
