--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -13,7 +13,7 @@ img{
 
 main{
     padding: 10px;
-    max-width: 700px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -42,14 +42,27 @@ header nav{
 
 div.post{
     display: grid;
-    grid-template-columns: 0.9fr 1.1fr;
-    gap: 20px;
+    grid-template-columns: 1fr;
+    gap: 5px;
     margin-bottom: 1.8rem;
 }
+
+@media screen and (min-width: 668px){
+    div.post{
+        grid-template-columns: 0.9fr 1.1fr;
+        gap: 20px;
+    }
+}
+
 
 div.post div.texts h2{
     margin: 0;
     font-size: 1.2rem;
+}
+
+div.post div.texts a{
+    text-decoration: none;
+    color: inherit;
 }
 
 div.post p.info{
@@ -100,4 +113,47 @@ button{
     border: 0;
     color: #fff;
     padding: 7px 0;
+}
+
+/* POST DEFINATION PAGE STYLING */
+div.post-page h1{
+    text-align: center;
+}
+
+div.post-page time{
+    text-align: center;
+    display: block;
+    font-size: 0.7rem;
+    color: #aaa;
+}
+
+div.post-page div.author{
+    text-align: center;
+    margin-bottom: 1.1rem;
+    font-size: 0.7rem;
+    font-size: 0.7rem;
+    font-weight: bold;
+    color: #aaa;
+}
+
+div.post-page div.image{
+    max-height: 200px;
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+}
+
+div.post-page div.image img{
+    object-fit: cover;
+    object-position: center center;
+    width: 100%;
+}
+
+div.post-page a{
+    color: #333;
+    text-decoration: underline;
+}
+
+div.post-page div.content p{
+    line-height: 1.6rem;
 }
