--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -175,8 +175,9 @@ div.post-page div.image img{
 }
 
 div.post-page a{
-    color: #333;
+    color: #31aff5;
     text-decoration: underline;
+    line-height: 1.4rem;
 }
 
 div.post-page div.content p{
